minor corrections for canvas submission

--- a/read15_301.md
+++ b/read15_301.md
@@ -6,8 +6,7 @@ We are currently working and about to embark on more extensive work with APIs an
 ### [What is OAuth](https://www.csoonline.com/article/3216404/what-is-oauth-how-the-open-authorization-framework-works.html)
 
 #### 1. What is OAuth?
-- OAuth is an open-standard authorization protocol or framework that describes how unrelated servers and services can safely allow authenticated access to their assets without actually sharing the initial, related, single logon credential. 
-  - <https://www.csoonline.com/article/3216404/what-is-oauth-how-the-open-authorization-framework-works.html>
+"OAuth is an open-standard authorization protocol or framework that describes how unrelated servers and services can safely allow authenticated access to their assets without actually sharing the initial, related, single logon credential." [Directly quoted from:](https://www.csoonline.com/article/3216404/what-is-oauth-how-the-open-authorization-framework-works.html)
 
 #### 2. Give an example of what using OAuth would look like.
 "The simplest example of OAuth is when you go to log onto a website and it offers one or more opportunities to log on using another website’s/service’s logon. You then click on the button linked to the other website, the other website authenticates you, and the website you were originally connecting to logs you on itself afterward using permission gained from the second website." -[Directly quoted from](https://www.csoonline.com/article/3216404/what-is-oauth-how-the-open-authorization-framework-works.html)
@@ -32,27 +31,28 @@ We are currently working and about to embark on more extensive work with APIs an
 OpenID is a security technology with a focus on authentication. It originally served as a single sign-in vouching for the identities of users but was difficult to implement so it was reinvented in 2014 as an authentication layer for OAuth. -[Paraphrased from](https://www.csoonline.com/article/3216404/what-is-oauth-how-the-open-authorization-framework-works.html)
 
 
-
 ### [Authorization and Authentication flows](https://auth0.com/docs/flows)
 
 #### 1. What is the difference between authorization and authentication?
-"In simple terms, authentication is the process of verifying who a user is, while authorization is the process of verifying what they have access to."[Directly quoted from:](https://auth0.com/docs/get-started/identity-fundamentals/authentication-and-authorization)
+"In simple terms, authentication is the process of verifying who a user is, while authorization is the process of verifying what they have access to." [Directly quoted from:](https://auth0.com/docs/get-started/identity-fundamentals/authentication-and-authorization)
 
 #### 2. What is Authorization Code Flow?
 ![Auth Code Flow](AuthCodeFlow.jpeg)
 
 #### 3. What is Authorization Code Flow with Proof Key for Code Exchange (PKCE)?
-"The PKCE-enhanced Authorization Code Flow introduces a secret created by the calling application that can be verified by the authorization server; this secret is called the Code Verifier. Additionally, the calling app creates a transform value of the Code Verifier called the Code Challenge and sends this value over HTTPS to retrieve an Authorization Code. This way, a malicious attacker can only intercept the Authorization Code, and they cannot exchange it for a token without the Code Verifier." -[Directly quoted from:](https://auth0.com/docs/get-started/authentication-and-authorization-flow/authorization-code-flow-with-proof-key-for-code-exchange-pkce)
+"The PKCE-enhanced Authorization Code Flow introduces a secret created by the calling application that can be verified by the authorization server; this secret is called the Code Verifier. Additionally, the calling app creates a transform value of the Code Verifier called the Code Challenge and sends this value over HTTPS to retrieve an Authorization Code. This way, a malicious attacker can only intercept the Authorization Code, and they cannot exchange it for a token without the Code Verifier." [Directly quoted from:](https://auth0.com/docs/get-started/authentication-and-authorization-flow/authorization-code-flow-with-proof-key-for-code-exchange-pkce)
 
 #### 4. What is Implicit Flow with Form Post?
-- "Implicit Flow with Form Post flow uses OIDC to implement web sign-in that is very similar to the way SAML and WS-Federation operates. The web app requests and obtains tokens through the front channel, without the need for secrets or extra backend calls. With this method, you don’t need to obtain, maintain, use, and protect a secret in your application." - [Directly quoted from:]- <https://auth0.com/docs/get-started/authentication-and-authorization-flow/implicit-flow-with-form-post>
+"Implicit Flow with Form Post flow uses OIDC to implement web sign-in that is very similar to the way SAML and WS-Federation operates. The web app requests and obtains tokens through the front channel, without the need for secrets or extra backend calls. With this method, you don’t need to obtain, maintain, use, and protect a secret in your application." - [Directly quoted from:](https://auth0.com/docs/get-started/authentication-and-authorization-flow/implicit-flow-with-form-post)
+
 ![ImplicitFlowForm](https://files.slack.com/files-pri/T039KG69K-F03JVLW5ZLZ/auth-sequence-implicit-form-post.png)
 
 #### 5. What is Client Credentials Flow?
 Machine-to-Machine apps authenticate and authorize actions and access rights themselves rather than a user doing it. Client Credentials Flow is a process by which the machines pass along their Client ID and Secret to authenticate themselves and get a token. [Paraphrased from:](https://auth0.com/docs/get-started/authentication-and-authorization-flow/client-credentials-flow)
 
 #### 6. What is Device Authorization Flow?
-- "With input-constrained devices that connect to the internet, rather than authenticate the user directly, the device asks the user to go to a link on their computer or smartphone and authorize the device. This avoids a poor user experience for devices that do not have an easy way to enter text. To do this, device apps use the Device Authorization Flow (drafted in OAuth 2.0). For use with mobile/native applications."
+"With input-constrained devices that connect to the internet, rather than authenticate the user directly, the device asks the user to go to a link on their computer or smartphone and authorize the device. This avoids a poor user experience for devices that do not have an easy way to enter text. To do this, device apps use the Device Authorization Flow (drafted in OAuth 2.0). For use with mobile/native applications." [Directly quoted from:](https://auth0.com/docs/get-started/authentication-and-authorization-flow/device-authorization-flow)
+
 ![DeviceFlowAuth](DeviceFlowAuth.png)
 
 #### 7. What is Resource Owner Password Flow?
