correction to images not displaying properly

--- a/read15_301.md
+++ b/read15_301.md
@@ -45,7 +45,7 @@ OpenID is a security technology with a focus on authentication. It originally se
 #### 4. What is Implicit Flow with Form Post?
 "Implicit Flow with Form Post flow uses OIDC to implement web sign-in that is very similar to the way SAML and WS-Federation operates. The web app requests and obtains tokens through the front channel, without the need for secrets or extra backend calls. With this method, you don’t need to obtain, maintain, use, and protect a secret in your application." - [Directly quoted from:](https://auth0.com/docs/get-started/authentication-and-authorization-flow/implicit-flow-with-form-post)
 
-![ImplicitFlowForm](https://files.slack.com/files-pri/T039KG69K-F03JVLW5ZLZ/auth-sequence-implicit-form-post.png)
+![ImplicitFlowForm](ImplicitFlowForm.jpeg)
 
 #### 5. What is Client Credentials Flow?
 Machine-to-Machine apps authenticate and authorize actions and access rights themselves rather than a user doing it. Client Credentials Flow is a process by which the machines pass along their Client ID and Secret to authenticate themselves and get a token. [Paraphrased from:](https://auth0.com/docs/get-started/authentication-and-authorization-flow/client-credentials-flow)
@@ -53,7 +53,7 @@ Machine-to-Machine apps authenticate and authorize actions and access rights the
 #### 6. What is Device Authorization Flow?
 "With input-constrained devices that connect to the internet, rather than authenticate the user directly, the device asks the user to go to a link on their computer or smartphone and authorize the device. This avoids a poor user experience for devices that do not have an easy way to enter text. To do this, device apps use the Device Authorization Flow (drafted in OAuth 2.0). For use with mobile/native applications." [Directly quoted from:](https://auth0.com/docs/get-started/authentication-and-authorization-flow/device-authorization-flow)
 
-![DeviceFlowAuth](DeviceFlowAuth.png)
+![DeviceFlowAuth](DeviceFlowAuth.jpeg)
 
 #### 7. What is Resource Owner Password Flow?
 Resource Owner Password Flow is the authentication/authorization flow which requests that users provide credentials using an interactive form. This method is NOT recommended as credentials are sent to backend and can be stored for futher use before being exchanged for an Access Token. [Paraphrased from:](https://auth0.com/docs/get-started/authentication-and-authorization-flow/resource-owner-password-flow)
