correction to image name that was not displaying

--- a/read15_301.md
+++ b/read15_301.md
@@ -53,7 +53,7 @@ Machine-to-Machine apps authenticate and authorize actions and access rights the
 #### 6. What is Device Authorization Flow?
 "With input-constrained devices that connect to the internet, rather than authenticate the user directly, the device asks the user to go to a link on their computer or smartphone and authorize the device. This avoids a poor user experience for devices that do not have an easy way to enter text. To do this, device apps use the Device Authorization Flow (drafted in OAuth 2.0). For use with mobile/native applications." [Directly quoted from:](https://auth0.com/docs/get-started/authentication-and-authorization-flow/device-authorization-flow)
 
-![DeviceFlowAuth](DeviceFlowAuth.jpeg)
+![DeviceFlowAuth](DeviceAuthFlow.jpeg)
 
 #### 7. What is Resource Owner Password Flow?
 Resource Owner Password Flow is the authentication/authorization flow which requests that users provide credentials using an interactive form. This method is NOT recommended as credentials are sent to backend and can be stored for futher use before being exchanged for an Access Token. [Paraphrased from:](https://auth0.com/docs/get-started/authentication-and-authorization-flow/resource-owner-password-flow)
