--- a/read14_301.md
+++ b/read14_301.md
@@ -1,33 +1,25 @@
 #### *Why This Topic Matters As it Relates to This Module*
-lorem ipsum
+Divesity and inclusion matter in all matters that involve living beings.
 
 ### [That Time When Women Stopped Coding](https://www.npr.org/sections/money/2014/10/21/357629765/when-women-stopped-coding)
 
 #### 1. What occurred during the same time as the beginning of the decline of women in computer science?
-lorem ipsum
+"The share of women in computer science started falling at roughly the same moment when personal computers started showing up in U.S. homes in significant numbers." -Directly quoted from source above
 
 #### 2. Why does it matter that males had been playing on computers growing up?
-lorem ipsum
-
+It mattered that males had been playing on computers growing up because this was an assumption that instructors were making and courses were tailored to those with experience which served as an impediment to those coming in without that prior experience.
 
 ### [Video: Employee breakdown of key technology companies](https://informationisbeautiful.net/visualizations/diversity-in-tech/)
 ### [Video: Why diversity matters to your tech company](https://www.usatoday.com/story/tech/columnist/2015/07/21/why-diversity-matters-your-tech-company/30419871/)
 
 #### 1. When are diversity efforts most successful?
-
-lorem ipsum
+"Diversity efforts are most successful when they’re driven by a commitment from company leaders." -Directly quoted from source above
 
 #### 2. Why do diverse companies perform better?
-
-lorem ipsum
+According to Scott E. Page, professor of complex systems, political science and economics at the University of Michigan: "Diverse groups of people bring to organizations more and different ways of seeing a problem and, thus, faster/better ways of solving it." -Directly quoted from source above
 
 #### 3. Give an example of how a diverse company can serve a diverse user base or vise-versa.
-lorem ipsum
-
+To paraphrase a quote of Tracy Chaou of Pinterest appearing in the source article, if the products offered by a company are built by people reflective of the diverse cultures, demographics and life experiences of the user base then what makes the community to so vibrant will perpetuate a diverse and vibrant growth of said community.
 
 #### *Things I want to know more about*
-lorem ipsum
-
-
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+I may look more into Paradigm, I'm impressed that there is a company dedicated to advising tech organizations on embracing diversity and inclusion in the workplace.
