--- a/read14_301.md
+++ b/read14_301.md
@@ -1,5 +1,5 @@
 #### *Why This Topic Matters As it Relates to This Module*
-Divesity and inclusion matter in all matters that involve living beings.
+Diversity and inclusion matter in all matters that involve living beings.
 
 ### [That Time When Women Stopped Coding](https://www.npr.org/sections/money/2014/10/21/357629765/when-women-stopped-coding)
 
