pushing an update to address an incomplete note

--- a/read02_401.md
+++ b/read02_401.md
@@ -29,7 +29,7 @@
 
 1. `Explain why tests are important. Please explain as though I were your non technical elder.`
 
-   Test Driven Development (TDD) 
+   Test Driven Development (TDD) is the practice of coding tests for the problem domain solution code along the way. It is comprised of three parts: coding, testing, and then refactoring based on the results of the test. Basically it helps ensure that your solution code works as intended without the unfortunate side effect of breaking something else.
 
 2. `What are three expected benefits of testing?`
     * _"many teams report significant reductions in defect rates, at the cost of a moderate increase in initial development effort"_
