read10 update; read 11 ready for canvas submission

--- a/read09_401.md
+++ b/read09_401.md
@@ -2,7 +2,9 @@
 [Today's Lab Requirements](https://codefellows.github.io/code-401-javascript-guide/curriculum/class-09/lab/)
 
 ##### 1. Discuss 2 possible project ideas that could be completed by you and a partner in the alloted time.
-_< Flail! Flail! Hair is on fire! Flail!>_
+* an app that lets users log in to access a database of info about Star Fleet captains and depending on their authorization, CRUD the info;
+
+* something that lets you add feedback on how your pets react to their foods/snacks (i.e. "liked it for a while then not after a week", "hated it from the beginning.")
 
 ### BookMark & Review
 * [Review API Server Build](https://codefellows.github.io/code-401-javascript-guide/curriculum/apps-and-libraries/api-server/)
