Read 12 ready for canvas submission

--- a/read11_401.md
+++ b/read11_401.md
@@ -12,6 +12,8 @@ _"By registering event listeners we can actually reverse the flow of communicati
 
 Considering my current level of knowledge I am unable at this time to explain this to a non-technical friend; however, I will delve over the weekend and update this entry as soon as I am versed enough to be able to do so.
 
+*Update* Having taken some time to go through the article again line by line, I'm afraid I have not uncovered anything new that allows me to properly answer this question. 
+
 ### Bookmark and Review
  * _[Node docs: events](https://nodejs.org/api/events.html)_
 
