uminor edits and addition of Things Id like to know more about

--- a/read17_401.md
+++ b/read17_401.md
@@ -39,9 +39,15 @@ _"A Content Delivery Network (CDN) is a geographically distributed group of serv
 When a user requests webpage content the request is handled by a CDN that is (regionally) close to the user.
 
 3. What are the benefits of employing a CDN?
+
 Employing a CDN results in faster load times, increased protection against DoS attacks and data loss (because replication) and avoids the headache of hardware issues that may be associated with employing single origin servers. 
 
 ### Reflection
 1. What are your learning goals after reading and reviewing the class [README](https://codefellows.github.io/code-401-javascript-guide/curriculum/class-17/)?
 
 Nothing fancy but I aim to learn how to use this tech!
+
+
+`Things I'd like to know more about:`
+
+While working on this reading assignment I went down many, MANY, rabbitholes. Being a long-time (though on-again-off-again) BOINC participant partially reading [THIS ARTICLE](https://gmd.copernicus.org/articles/10/811/2017/gmd-10-811-2017.pdf) is one of the rabbit holes I'd like to return to at a later date and finish the article. As that time will undoubtedly be AFTER this course is finished I'm hoping that I will have attained the requisite knowledge to understand all the bits about computing (I'll be OK if they get deep into weather jargon of which I'm unfamiliar).
