completion of the reading notes for class 18

--- a/read18_401.md
+++ b/read18_401.md
@@ -48,24 +48,24 @@ I would recommend DynamoDB over MongoDB if you are employing AWS Lambda, and/or 
 
 1. Explain to a non-technical friend how DynamoDB works.
 
-*************
+At this time I cannot. DynamoDB appears to be a vacuous rabbithole down which one would have to fall, as off the path into Faerie, and significant time exploring before garnering any communicable understanding of its workings.
 
 [Dynamoose](https://dynamoosejs.com/getting_started/Introduction)
 
 1. What is Dynamoose?
 
-*************
+Dynamoose is a modeling tool [syntactically similar to Mongoose] for Amazon's DynamoDB. _-paraphrased from the article_
 
 2. What are some key features of Dynamoose?
 
-*************
+Easy to use syntax, strict data modeling, and callback & promise support are among the key features offered by Dynamoose.
 
 ### Reflection
 
 1. What are your learning goals after reading and reviewing the [class README](https://codefellows.github.io/code-401-javascript-guide/curriculum/class-18/)?
 
-**************
+Single learning goal: How to create a lambda function that can operate on a DynamoDB Table that feeds an educational web app.
 
 `Things I'd like to know more about:`
 
-**************
+All of it. There's just too much to list at this point.
