read 19 ready for canvas submission

--- a/read19_401.md
+++ b/read19_401.md
@@ -1,30 +1,48 @@
 ## AWS: Events
-[AWS SQS vs SNS]()
+[AWS SQS vs SNS](https://medium.com/awesome-cloud/aws-difference-between-sqs-and-sns-61a397bf76c5)
 
 1. What is the difference betweeen SQS and SNS?
+* Simple Notification Service (SNS) is a push notification service. Right now I think of it as a relay service like Wells Fargo of the olden days. You give them a message, and they send the message on horseback to destinations far and wide. If you don't give them a message to send, nothing happens, but if you do a horseman is sent out immediately.
+
+* Simple Queue Service (SQS) is a queueing service. I think of this as bank of post office boxes. As messages come in they get dropped into an appropriate mailbox but the messages don't go anywhere until someone comes to get them.
+
 2. What are some use cases for both SNS and SQS?
 
-[AWS SNS and SQS]()
+* Use SNS if you want the same message handled in different ways. 
+* Use SQS if you just need a simple queue.
+
+[AWS SNS and SQS](https://www.youtube.com/watch?v=mXk0MNjlO7A)
 
 1. Describe how to use SQS and SNS in a “fanout” pattern.
+
+  _"We can design fanout pattern by using both SNS and SQS. In this pattern, a message published to an SNS topic is distributed to multiple SQS queues in parallel."_
+
 2. Explain how “push notifications” work, using SNS.
 
-[SQS and SNS Basics]()
+SNS pushes the notification (topic) to whatever queues have been set up to receive them. The notifications then sit in their respective queues until some consumer (system, polling service, etc) checks to see if there's a message in queue and then retrieves said message and deletes it from the queue.
+
+[SQS and SNS Basics](https://www.youtube.com/watch?v=UesxWuZMZqI)
 
 1. How might a large scale, distributed application make use of a Queue system like SQS?
 
-### Bookmark and Review
-* [SNS Javascript SDK]()
+![Example](/SNS_SQS.jpg)
+This image from an earlier [video](https://www.youtube.com/watch?v=mXk0MNjlO7A) is an excellent example of a large scale, distributed app making use of a system like SQS. This diagram shows a purchase message being distributed and queued from point of sale to post-purchase email notification to the customer (as well as transaction analytics and fraud detection processes).
 
-* [SQS Javascript SDK]()
+
+
+### Bookmark and Review
+* [SNS Javascript SDK](https://docs.aws.amazon.com/AWSJavaScriptSDK/latest/AWS/SNS.html)
+
+* [SQS Javascript SDK](https://docs.aws.amazon.com/AWSJavaScriptSDK/latest/AWS/SQS.html)
 
 
 ### Reflection
 
-1. What are your learning goals after reading and reviewing the [class README]()?
+1. What are your learning goals after reading and reviewing the [class README](https://codefellows.github.io/code-401-javascript-guide/curriculum/class-19/)?
 
-...
+To be able to implement these concepts on the AWS console.
+
 
 `Things I'd like to know more about:`
 
-...
+I'll better be able to answer this after seeing how things go with the lab.
