read 26 ready for canvas submission

--- a/read26_401.md
+++ b/read26_401.md
@@ -1,14 +1,81 @@
-## Topic
-[]()
+## Component Based UI
+[react hello world](https://facebook.github.io/react/docs/hello-world.html)
 
-1. 
+**What are the building blocks of a React app?**
 
-### Reflection
+The building blocks of a React app are *elements* and *components*.
 
-1. What are your learning goals after reading and reviewing the [class README]()?
+**What is the difference between an element and a React component?** 
 
-dunno
+An element is a shortcut method of writing a line of code sandwiched between html tags and rendering it to the DOM while a component is a chunk of independing reusable code pieces that can be rendered, altered or manipulated separately from the remainder of the UI code base.
+
+**What are some advantages of React’s component based architecture?** 
+
+The component based architecture makes React infinitely more flexible than having only individual lines of JSX. You can change (even automate the changing of) entire web domains with minimal effort when the code is chunked into modules. 
+
+[UPDATED LINK: your-first-component](https://beta.reactjs.org/learn/your-first-component)
+  ** circle back to this
+
+
+[introducing JSX](https://facebook.github.io/react/docs/introducing-jsx.html)
+
+**What is JSX and why do we use it?** 
+
+JSX is a syntax extension to JavaScript which allows for the production of "elements" (content encapsulated in specially formatted tags) which are subsequently rendered to the DOM.
+
+**Describe the process of embedding JavaScript expressions in JSX.**
+
+One can embed javascript expressions in attributes by using quotes to specify string literals or by using curly braces around the expression. 
+
+**Is it safe to embed user input in JSX? Explain.**
+
+_"It is safe to embed user input in JSX... By default, React DOM escapes any values embedded in JSX before rendering them. Thus it ensures that you can never inject anything that’s not explicitly written in your application. Everything is converted to a string before being rendered. This helps prevent XSS (cross-site-scripting) attacks."_
+
+[rendering elements](https://facebook.github.io/react/docs/rendering-elements.html)
+
+**Explain what a React Component is to a non-technical friend.**
+ 
+A React Component is a modular chunk of code. Think of it as a section of a lego sculpture. It is an integral part of the whole, but it can be separated, fixed, updated, etc and then put back without having to change any other part of the sculpture. 
+
+**Describe mutability and React Components, specifically, how is the UI updated?** 
+
+React Components  are not allowed to change their own inputs ("props") and are thus immutable; however, components can change their output over time in response to changes in "state".
+
+**If changes are made to the UI, what does React update?**
+
+State
+
+### Bookmark and Review
+
+* [Airbnb React/JSX Style Guide](https://airbnb.io/javascript/react/)
+* [sass cheatsheet](https://devhints.io/sass)
+* [react cheatsheet](https://devhints.io/react)
+* [another react cheatsheet](https://reactcheatsheet.com/)
+
+* [Pete Hunt: React: Rethinking Best Practices -- JSConf EU](https://www.youtube.com/watch?v=x7cQ3mrcKaY)
+
+  _"Meet React; it's a library for creating user interfaces. Specifically, we render your UI and we respond to events."_
+
+### Additional Questions
+
+**Note the naming conventions in the Airbnb React/JSX Style Guide. What pattern(s) do you see?**
+
+Most notable to me is that there are numerous specifications! One should use the .jsx extension for compoents, use PascalCase for filenames and React Components but then use camelCase for their instances. Additionally there are specifications for component naming, higher-order component naming, and props naming.
+
+**Looking ahead at this module’s course schedule, What do you look forward to learning?** 
+
+I try not to look too far ahead to avoid paralyzation. I look forward to learning whatever bits I can glean from each lecture and assignment.
+
+**What are your learning goals after reading and reviewing the [class README](https://codefellows.github.io/code-401-javascript-guide/curriculum/class-26/)?** 
+
+Pretty much everything in the "Execute" section:
+* Begin a React project locally with create-react-app
+* Use codesandbox.io to work live on a React application
+* Create and render Class and Functional React components to the DOM
+* Add event listeners to React components
+* Update React component state
+* Style React applications/components using SASS
 
 `Things I'd like to know more about:`
 
-stuff
+Too early to tell.
