--- a/read27_401.md
+++ b/read27_401.md
@@ -1,14 +1,45 @@
-## Topic
-[]()
+## useState() Hook
+[Introducing Hooks](https://reactjs.org/docs/hooks-intro.html#motivation)
 
-1. 
+**What was the motivation for introducing Hooks?**
+
+React needed a "better primitive for sharing stateful logic" so that component hierarchy could remain unaltered.
+
+**What changes are important regarding implementing Hooks versus Component Classes?**
+
+
+
+**Hooks allow you to reuse stateful logic without changing ___ _______.**
+
+
+[hooks api](https://reactjs.org/docs/hooks-overview.html)
+
+**Name two rules imposed by React Hook usage.**
+
+**How would you identify a custom Hook and why might you create one?**
+
+
+[the state hook](https://reactjs.org/docs/hooks-state.html)
+
+**What is a Hook?**
+
+**When would I use the useState Hook?**
+
+**If you were to add React state to a function component by declaring a state variable:**
+* **What does calling useState do?**
+
+* **What do we pass to useState as an argument?**
+
+* **What does useState return?**
+
+### Bookmark & Review
+* [hooks api reference](https://reactjs.org/docs/hooks-reference.html)
 
 ### Reflection
 
 1. What are your learning goals after reading and reviewing the [class README]()?
 
-dunno
+
 
 `Things I'd like to know more about:`
 
-stuff
