Read 27 on Hooks ready for canvas submission

--- a/read27_401.md
+++ b/read27_401.md
@@ -6,40 +6,58 @@
 React needed a "better primitive for sharing stateful logic" so that component hierarchy could remain unaltered.
 
 **What changes are important regarding implementing Hooks versus Component Classes?**
+* hook implementation is optional
+* it is 100% backward compatible
+* it is available as of React v16.8.0
 
-
-
-**Hooks allow you to reuse stateful logic without changing ___ _______.**
+**Hooks allow you to reuse stateful logic without changing** COMPONENT HEIRARCHY.
 
 
 [hooks api](https://reactjs.org/docs/hooks-overview.html)
 
 **Name two rules imposed by React Hook usage.**
 
-**How would you identify a custom Hook and why might you create one?**
+* _"Only call Hooks at the top level. Don’t call Hooks inside loops, conditions, or nested functions."_
+* _"Only call Hooks from React function components. Don’t call Hooks from regular JavaScript functions."_
 
+**How would you identify a custom Hook and why might you create one?**
+Identification: _"If a function's name starts with `use` and it calls other Hooks, we say it is a custom Hook."_
+
+_"You can write custom Hooks that cover a wide range of use cases like form handling, animation, declarative subscriptions, [and] timers" among other things.
 
 [the state hook](https://reactjs.org/docs/hooks-state.html)
 
 **What is a Hook?**
 
+_"A Hook is a special function that lets you “hook into” React features."_
+
 **When would I use the useState Hook?**
+
+You would use the useState Hook when you need to reuse state logic in multiple function components without having to alter your component heirarchy.
 
 **If you were to add React state to a function component by declaring a state variable:**
 * **What does calling useState do?**
 
+Calling `useState` declares a state variable.
+
 * **What do we pass to useState as an argument?**
 
+We only pass the initial state to `useState` as an argument.
+
 * **What does useState return?**
+
+`useState` returns two things: the current state, and a function that updates the current state.
+
 
 ### Bookmark & Review
 * [hooks api reference](https://reactjs.org/docs/hooks-reference.html)
 
 ### Reflection
 
-1. What are your learning goals after reading and reviewing the [class README]()?
+1. What are your learning goals after reading and reviewing the [class README](https://codefellows.github.io/code-401-javascript-guide/curriculum/class-27/)?
 
-
+My goal is to actually understand all of the words that I just read in this assignment.
 
 `Things I'd like to know more about:`
 
+I'd like to get a bit of practice in acutally using `useState` on a project of personal interest.
