--- a/read28_401.md
+++ b/read28_401.md
@@ -1,14 +1,66 @@
-## Topic
-[]()
+## Advanced State with Reducers
 
-1. 
+
+[useReducer hook](https://reactjs.org/docs/hooks-reference.html#usereducer)
+
+
+**Name an alternative to the useState Hook.**
+
+`useReducer` is an alternative to the useState Hook.
+
+**Why might the useReducer Hook be preferable to the useState Hook?**
+_"`useReducer` is usually preferable to `useState` when you have complex state logic that involves multiple sub-values or when the next state depends on the previous one. `useReducer` also lets you optimize performance for components that trigger deep updates because you can pass dispatch down instead of callbacks."_
+
+**What are two ways to set the initial state?**
+
+_"The simplest way is to pass the initial state as a second argument... You can also... pass an `init` function as the third argument."_ 
+
+[Ultimate Guide to useReducer](https://blog.logrocket.com/guide-to-react-usereducer-hook/)
+
+
+**In terms of state, what does useReducer expect to receive as a parameter?** 
+
+_"The `useReducer` Hook is used to store and update states, just like the `useState` Hook. It accepts a reducer function as its first parameter and the initial state as the second."_
+
+**What does useReducer return?**
+
+_"`useReducer` returns an array that holds the current state value and a dispatch function to which you can pass an action and later invoke it."_
+
+**Explain dispatch to a non-technical recruiter.**
+
+As yet I cannot.
 
 ### Reflection
 
-1. What are your learning goals after reading and reviewing the [class README]()?
+1. What are your learning goals after reading and reviewing the [class README](https://codefellows.github.io/code-401-javascript-guide/curriculum/class-29/)?
 
-dunno
+My learning goals are to be able to describe and define: reducers, actions, and dispatching.
 
 `Things I'd like to know more about:`
 
-stuff
+It's too early to tell.
+
+### Answer these questions as additional review from Saturday the 4th [of March 2023]:
+
+**Describe the use cases for [`useCallback`](https://reactjs.org/docs/hooks-reference.html#usecallback) and [`useMemo`](https://reactjs.org/docs/hooks-reference.html#usememo).** 
+
+_"`useMemo` ... is useful when you don't want to recalculate heavy calculations each time a component renders. `useCallback` is used to avoid recreating / redefining methods at every render."_ -_[Attribution: Ajeet Shah](https://stackoverflow.com/questions/66429202/what-are-production-use-cases-for-the-useref-usememo-usecallback-hooks)_
+
+**What is the importance of the dependencies array for these hooks?** 
+
+Both `useMemo` and `useCallback` will call a function on their first render and then will return the same value on all subsequent renders unless the dependencies array has changed. _-paraphrased from beta.reactjs.org_
+
+**What is the relationship between useMemo and useCallback?**
+
+Both `useMemo` and `useCallback` let you cache (aka "memoize") something you're passing down but differ in that `useMemo` caches the result of calling a function whereas `useCallback` caches the function itself. _-paraphrased from [beta.reactjs.org](https://beta.reactjs.org/reference/react/useCallback#how-is-usecallback-related-to-usememo)_
+
+**[Making Fetch Happen](https://javascript.info/fetch), [the fetch API](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API).**
+
+
+**What is the difference between response.text(), response.body(), and response.blob()?** 
+![Fetch methods](/fetchInfo.jpg)
+[Image Source](https://javascript.info/fetch)
+
+**Why do you think those methods each return a promise?**
+
+I think these methods return promises because their main funciton is to send network requests and therefore must work asynchronously. Returning a promise seems in line with what we have learned thus far about asynchronous network communications. [resource](https://javascript.info/fetch)
