reading notes 29 ready for canvas submission

--- a/read29_401.md
+++ b/read29_401.md
@@ -1,14 +1,37 @@
-## Topic
-[]()
+## Component Lifecycle/useEffect Hook
 
-1. 
+[effects hook](https://reactjs.org/docs/hooks-effect.html)
+
+1. What purpose does useEffect serve in a function component compared to its counterpart(s) in class components?
+  _"If you’re familiar with React class lifecycle methods, you can think of useEffect Hook as componentDidMount, componentDidUpdate, and componentWillUnmount combined."_
+
+2. When using the useEffect Hook:
+  
+    1. What does useEffect do?
+     The `useEffect` hook works like an event listener and takes in a callback function and an (optional) array and runs the callback function any time that there is a change in the array on all subsequent renders.
+  
+    2. Why is useEffect called inside a component?
+
+    _"Placing useEffect inside the component lets us access the count state variable (or any props) right from the effect."_
+
+Note: `useEffect` runs after every the initial and after all subsequent renders.
+
+
+3. Explain the importance of properly implementing effects with Cleanup
+
+I can't explain this yet. It appears to have something to do with how tightly the logic for adding and removing subscriptions is related to the useEffect hook but right now it's all just so many words on a screen with little to no meaning. Will have to revisit after lecture.
 
 ### Reflection
 
-1. What are your learning goals after reading and reviewing the [class README]()?
+1. What are your learning goals after reading and reviewing the [class README](https://codefellows.github.io/code-401-javascript-guide/curriculum/class-28/)?
 
-dunno
+My goals mirror the intent of the readme document which are:
+_"Describe and Define_
+_Describe the lifecycle of a React component_
+_Use of the effect hook to tap into and operate on the component lifecycle_
+_Watching state and other conditions_
+_Use an effect hook to manage state at various (tactical) times during the life of a component"_
+
 
 `Things I'd like to know more about:`
-
-stuff
+I found both the reactjs.org article and the class readme article to be confusing. I will be revisiting these write-ups after playing with the code for a bit to pick up what I didn't get the first time through.
