canvas submission of Hash Tables read notes

--- a/read30_401.md
+++ b/read30_401.md
@@ -1,14 +1,29 @@
-## Topic
-[]()
+## Hash Tables
 
-1. 
+### To turn in your reading “Reply” to this discussion by teaching something that you learned from the readings listed below.
+#### Resources
+* Read: [Intro to Hash Tables](https://codefellows.github.io/common_curriculum/data_structures_and_algorithms/Code_401/class-30/resources/Hashtables.html)
+* Watch: [what is a hash table?](https://www.youtube.com/watch?v=MfhjkfocRR0)
+* Read: [basics of hash tables](https://www.hackerearth.com/practice/data-structures/hash-tables/basics-of-hash-tables/tutorial/)
+* Skim: [hash table wiki](https://en.wikipedia.org/wiki/Hash_table)
 
-### Reflection
+### A Partial Vocabulary/Definition List:
 
-1. What are your learning goals after reading and reviewing the [class README]()?
+**Hash** _"A hash is the result of some algorithm taking an intcoming string and converting it into a value that could be used for either security or some other purpose. In the case of a hashtable, it is used to determin the index of the array."_ [codefellows](https://codefellows.github.io/common_curriculum/data_structures_and_algorithms/Code_401/class-30/resources/Hashtables.html)
 
-dunno
+**Hash Function**
+a function that convversts large keys into small keys so that values can be stored in hash table.
 
-`Things I'd like to know more about:`
+**Hash Table:**
+_"... an abstract data type that maps keys to values. A hash table uses a hash function to compute an index, also called a hash code, into an array of buckets or slots, from which the desired value can be found. During lookup, the key is hashed and the resulting hash indicates where the corresponding value is stored."_ -[wikipedia](https://en.wikipedia.org/wiki/Hash_table#:~:text=It%20is%20an%20abstract%20data,the%20corresponding%20value%20is%20stored.)
 
-stuff
+**Bucket**
+_"A bucket is what is contained in each index of the array of the hashtable. Each
+index is a bucket. An index could potentially contain multiple key/value pairs if a
+collision occurs."_ -[codefellows](https://codefellows.github.io/common_curriculum/data_structures_and_algorithms/Code_401/class-30/resources/Hashtables.html)
+
+**Collision**
+A collision is what happens when two elements are both hashed to the same index.
+
+**Collision Resolution**
+When two elements are hashed to the same array index a "collision" occurs and both elements result in different buckets of the same index. There are several options to resolve this overlap and those options are employed to resolve the collision and thus are referred to as "collision resolutions". These options include (but are not limited to): separate chaining (building an internal linked list); and open addressing (putting all the information in to buckets and then probing each bucket to find what is sought). Open addressing has several resolution techniques based upon it's overarching principal and these include "coalesced hashing", "cuckoo hashing", "hopscotch hashing", and "Robin Hood hashing".
