changing workstations, partial commit of read 31 Context API for canvas

--- a/read31_401.md
+++ b/read31_401.md
@@ -1,13 +1,25 @@
-## Topic
-[]()
+## Context API
+[Context API](https://reactjs.org/docs/context.html)
 
-1. 
+1. What can React Context provide your app?
+React Context provides you with a way to pass props through your app without having to adhere to the standard top-down (parent-to-child) approach; in other words we can skip passing props through elements to which those props are irrelevant.
 
-### Reflection
+2. Why might we use Context?
+You might use Context when applying a themed user interface to your application.
 
-1. What are your learning goals after reading and reviewing the [class README]()?
+3. Why should we use it sparingly?
+It would seem that because Context shares data globally, it should be used sparingly to avoid unintentional collisions; however, this is not what the reading indicates. Rather, the reading indicates that Context "makes component reuse more difficult". I will have to play around with it to fully understand why that is. 
 
-dunno
+[Awesome React Context links](https://github.com/diegohaz/awesome-react-context)
+
+1. Consume content from (at least) two of the Awesome React Context links. Share your take-away from each:
+
+  * Takeaway 1: 
+
+
+
+  * Takeaway 2:
+
 
 `Things I'd like to know more about:`
 
